--- a/Web2/Web.config
+++ b/Web2/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--"Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Web2-20180422031858.mdf;Initial Catalog=aspnet-Web2-20180422031858;Integrated Security=True"
       -->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=homeCareDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=homeCareDB;Integrated Security=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
