--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Admin\UserTable.cshtml" />
     <Content Include="Views\Admin\Delete.cshtml" />
     <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
