--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -312,6 +312,7 @@
     <Content Include="Views\Admin\Create.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\TaskList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
