--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -314,6 +314,7 @@
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Admin\TaskManage\Index.cshtml" />
+    <Content Include="Views\Customer\TaskList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
