--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -313,7 +313,8 @@
     <Content Include="Views\Admin\Create.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
-    <Content Include="Views\Admin\TaskManage\Index.cshtml" />
+    <Content Include="Views\Admin\TaskList.cshtml" />
+    <Content Include="Views\Admin\CreateTask.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
