added schedulelist for a single employee

--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -369,6 +369,7 @@
     <Content Include="Views\Admin\EditSchedule.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Admin\TimeCheck.cshtml" />
+    <Content Include="Views\Admin\EmployeeSchedules.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
