--- a/Web2/Web2.csproj
+++ b/Web2/Web2.csproj
@@ -229,11 +229,15 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\RelativeCustomerModel.cs" />
     <Compile Include="Models\MasterMixViewModel.cs" />
     <Compile Include="Models\Citrus.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MixViewModel.cs" />
+    <Compile Include="Models\RelativeModel.cs">
+      <DependentUpon>RelativeModel.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Models\RelativeModel.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -403,6 +407,7 @@
     <Content Include="Views\Admin\TimeCheck.cshtml" />
     <Content Include="Views\Employee\ScheduleList.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Admin\RelativeList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804230704470_InitialCreate.resx">
